<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/chat"
        android:contentDescription="@string/icon_logo" />

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/chatx"
        android:contentDescription="@string/name_logo" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/app_name"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:background="@drawable/edt_background"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_email"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="@drawable/edt_background"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:inputType="textWebPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/user_pass"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_login"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>